@@ -34,6 +34,9 @@ Bug Fixes
 * SOLR-8422: When authentication enabled, requests fail if sent to a node that doesn't host
   the collection (noble)
 
+* SOLR-7462: AIOOBE in RecordingJSONParser (Scott Dawson, noble)
+
+
 ==================  5.3.1 ==================
 
 Bug Fixes
